--- a/mozilla/firefox/profile/chrome/userChrome.css
+++ b/mozilla/firefox/profile/chrome/userChrome.css
@@ -121,12 +121,9 @@ See the above repository for updates as well as full license text. */
 
 /* OR, uncomment the following if you want menubar to appear below content, above tabs toolbar */
 
-#toolbar-menubar {
-    position: static;
-    display: flex;
-    margin-top: 0px !important;
-    background-color: transparent
-}
+/*
+  #toolbar-menubar{ position: static; display: flex; margin-top: 0px !important; background-color: transparent }
+  */
 
 /* set to "column-reverse" (without quotes) if you want tabs above menubar with the above option */
 #titlebar {
@@ -165,7 +162,7 @@ See the above repository for updates as well as full license text. */
         display: flex !important;
     }
 
-    :root[tabsintitlebar] #toolbar-menubar:not([autohide="false"])~#nav-bar {
+    :root:is([tabsintitlebar], [customtitlebar]) #toolbar-menubar:not([autohide="false"])~#nav-bar {
         >.titlebar-buttonbox-container {
             display: flex !important;
         }
