--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,41 +1,47 @@
-*{
-    font-family: JetBrainsMono;
-    font-size: 13px;
+* {
+    font-family: FiraCodeNerdFont;
+    font-size: 12px;
     min-height: 0;
     color: white;
+}
+
+
+#custom-logo {
+    font-size: 15px;
+    padding: 0 10px;
 }
 
 window#waybar {
     background-color: transparent;
 }
 
-#workspaces button{
-    border-radius: 15px;
+#workspaces button {
+    border-radius: 12px;
     font-weight: bolder;
     background-color: #181818;
 }
 
-#workspaces button.active, #workspaces button.focused{
-    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;    
+#workspaces button.active,
+#workspaces button.focused {
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
     background: #7C9D96;
 }
 
 #tray,
 #mpd,
 #custom-weather,
-#cpu, 
-#temperature, 
+#cpu,
+#temperature,
 #memory,
 #sway-mode,
-#backlight, 
-#pulseaudio, 
+#backlight,
+#pulseaudio,
 #custom-vpn,
 #disk,
 #custom-recorder,
 #custom-audiorec,
-#battery, 
-#clock, 
+#battery,
+#clock,
 #network {
-	padding: 0 10px;
+    padding: 0 10px;
 }
-
